@@ -76,7 +76,7 @@
 		<script type="text/javascript">
 			dojo.addOnLoad(function(){
 				var tmp = new dijit.layout.ContentPane({}, dojo.byId("ContentPane3"));
-				tmp.layout();
+				tmp.startup();
 				console.debug('created ' + tmp);	
 			});
 		</script>
